--- a/app/src/main/res/layout/app_item.xml
+++ b/app/src/main/res/layout/app_item.xml
@@ -10,13 +10,14 @@
         android:id="@+id/appIcon"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginEnd="12dp"/>
+        android:layout_marginStart="14dp"/>
 
     <TextView
         android:id="@+id/appName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="App Name"
+        android:layout_marginStart="10dp"
+        android:layout_gravity="center_vertical"
         android:textSize="16sp" />
 </LinearLayout>
 
