--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:background="@drawable/rounded_grey_button"
-        android:textColor="@android:color/white" /> <!-- Optional -->
+        android:textColor="@android:color/white" />
 
     <TextView
         android:id="@+id/timeSelected"
@@ -116,4 +116,23 @@
         android:layout_height="wrap_content"
         android:background="@drawable/rounded_grey_button"
         android:layout_marginTop="32dp"/>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="24dp"
+        android:elevation="6dp"
+        app:cardCornerRadius="12dp"
+        android:visibility="gone"
+        android:id="@+id/schedulesCardView">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/schedulesRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:scrollbars="vertical" />
+
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
