--- a/app/src/main/res/layout/fragment_schedule_list.xml
+++ b/app/src/main/res/layout/fragment_schedule_list.xml
@@ -3,6 +3,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="25dp" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/scheduleRecyclerView"
         android:layout_width="match_parent"
