--- a/app/src/main/res/layout/item_schedule.xml
+++ b/app/src/main/res/layout/item_schedule.xml
@@ -4,10 +4,9 @@
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    card_view:cardCornerRadius="8dp"
-    card_view:cardElevation="4dp">
-
+    android:layout_margin="@dimen/item_schedule_card_layout_margin"
+    card_view:cardCornerRadius="@dimen/item_schedule_card_corner_radius"
+    card_view:cardElevation="@dimen/item_schedule_card_elavation">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,34 +16,34 @@
 
         <TextView
             android:id="@+id/app_name"
-            android:textColor="@color/black"
-            android:textSize="15sp"
-            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/scheduled_app_name" />
+            android:gravity="center"
+            android:text="@string/scheduled_app_name"
+            android:textColor="@color/black"
+            android:textSize="@dimen/item_schedule_app_name_text_size" />
 
         <TextView
             android:id="@+id/scheduleInfo"
-            android:paddingHorizontal="5dp"
-            android:textSize="18sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/schedule_information" />
+            android:paddingHorizontal="5dp"
+            android:text="@string/schedule_information"
+            android:textSize="@dimen/item_schedule_schedule_info_text_size" />
 
         <LinearLayout
             style="?android:attr/buttonBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="end">
+            android:layout_gravity="end"
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/editButton"
                 style="?android:attr/buttonBarNegativeButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
+                android:layout_marginEnd="@dimen/item_schedule_edit_button_margin_end"
                 android:text="@string/edit" />
 
             <Button
