--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.Scheduler" parent="Theme.AppCompat.Light.NoActionBar" >
+    <style name="Theme.Scheduler" parent="Theme.MaterialComponents.Light.NoActionBar" >
         <item name="android:windowFullscreen">true</item>
     </style>
 </resources>
