--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,5 @@
     <dimen name="activity_schedule_pick_time_btn_margin_bottom">8dp</dimen>
     <dimen name="activity_schedule_selected_time_margin_bottom">24dp</dimen>
     <dimen name="activity_schedule_day_text_size">16sp</dimen>
+    <dimen name="scheduled_item_time_text_size">14sp</dimen>
 </resources>
