--- a/app/src/main/res/layout/item_scheduled_app.xml
+++ b/app/src/main/res/layout/item_scheduled_app.xml
@@ -3,7 +3,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:layout_margin="@dimen/item_schedule_card_layout_margin"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
     card_view:cardCornerRadius="12dp"
