--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,4 +15,6 @@
     <dimen name="activity_schedule_selected_time_margin_bottom">24dp</dimen>
     <dimen name="activity_schedule_day_text_size">16sp</dimen>
     <dimen name="scheduled_item_time_text_size">14sp</dimen>
+    <dimen name="scheduled_app_view_header_text_size">28sp</dimen>
+    <dimen name="delete_all_scheduled_btn_padding_end">20dp</dimen>
 </resources>
